--- a/src/index.html
+++ b/src/index.html
@@ -1,183 +1,219 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SlideMenu</title>
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SlideMenu</title>
 
-    <!-- build:css styles/slide-menu.css -->
-    <link rel="stylesheet" href="styles/slide-menu.css">
-    <!-- endbuild -->
+  <!-- build:css styles/slide-menu.css -->
+  <link rel="stylesheet" href="styles/slide-menu.css">
+  <!-- endbuild -->
 
-    <!-- build:css styles/preview.css -->
-    <link rel="stylesheet" href="styles/preview.css">
-    <!-- endbuild -->
+  <!-- build:css styles/preview.css -->
+  <link rel="stylesheet" href="styles/preview.css">
+  <!-- endbuild -->
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
+  <script
+    src="https://code.jquery.com/jquery-1.12.4.min.js"
+    integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 <body>
 
-    <main role="main">
-        <h1>Slide Menu</h1>
-        <p>A jQuery plugin for a multilevel CSS menu with a smooth slide effect and various options.</p>
+<main role="main">
+  <h1>Slide Menu</h1>
+  <p>A jQuery plugin for a multilevel CSS menu with a smooth slide effect and various options.</p>
 
-        <h2>Multi-purpose menu (left)</h2>
-        <div class="btn-list">
-            <button type="button" class="btn slide-menu-control" data-target="test-menu-left" data-action="toggle">Toggle Menu</button>
-            <button type="button" class="btn slide-menu-control" data-target="test-menu-left" data-action="open">Open Menu</button>
-            <button type="button" class="btn slide-menu-control" data-target="test-menu-left" data-action="close">Close Menu</button>
-        </div>
+  <h2>Multi-purpose menu (left)</h2>
+  <div class="btn-list">
+    <button type="button" class="btn slide-menu-control" data-target="test-menu-left" data-action="toggle">Toggle Menu
+    </button>
+    <button type="button" class="btn slide-menu-control" data-target="test-menu-left" data-action="open">Open Menu
+    </button>
+    <button type="button" class="btn slide-menu-control" data-target="test-menu-left" data-action="close">Close Menu
+    </button>
+  </div>
 
-        <h2>Navigation menu (right)</h2>
-        <div class="btn-list">
-            <button type="button" class="btn slide-menu-control" data-target="test-menu-right" data-action="toggle">Toggle Menu</button>
-            <button type="button" class="btn slide-menu-control" data-target="test-menu-right" data-action="open">Open Menu</button>
-            <button type="button" class="btn slide-menu-control" data-target="test-menu-right" data-action="close">Close Menu</button>
-            <button type="button" class="btn slide-menu-control" data-target="test-menu-right" data-action="back">Backward navigation</button>
-        </div>
-    </main>
+  <h2>Navigation menu (right)</h2>
+  <div class="btn-list">
+    <button type="button" class="btn slide-menu-control" data-target="test-menu-right" data-action="toggle">Toggle
+      Menu
+    </button>
+    <button type="button" class="btn slide-menu-control" data-target="test-menu-right" data-action="open">Open Menu
+    </button>
+    <button type="button" class="btn slide-menu-control" data-target="test-menu-right" data-action="close">Close Menu
+    </button>
+    <button type="button" class="btn slide-menu-control" data-target="test-menu-right" data-action="back">Backward
+      navigation
+    </button>
+  </div>
+</main>
 
-    <nav class="slide-menu" id="test-menu-left">
-        <div class="controls">
-            <button type="button" class="btn slide-menu-control" data-action="close">Close</button>
-        </div>
+<nav class="slide-menu" id="test-menu-left">
+  <div class="controls">
+    <button type="button" class="btn slide-menu-control" data-action="close">Close</button>
+  </div>
 
-        <p>You aren't limited to classical navigation menus.</p>
-        <p>In fact you can put anything you like in the menu</p>
-    </nav>
+  <p>You aren't limited to classical navigation menus.</p>
+  <p>In fact you can put anything you like in the menu</p>
+</nav>
 
 
-    <nav class="slide-menu" id="test-menu-right">
-        <div class="controls">
-            <button type="button" class="btn slide-menu-control" data-action="close">Close</button>
-            <button type="button" class="btn slide-menu-control" data-action="back">Back</button>
-        </div>
-        <ul>
+<nav class="slide-menu" id="test-menu-right">
+  <div class="controls">
+    <button type="button" class="btn slide-menu-control" data-action="close">Close</button>
+    <button type="button" class="btn slide-menu-control" data-action="back">Back</button>
+  </div>
+  <ul>
+    <li>
+      <a href="http://google.de">News</a>
+      <ul>
+        <li>
+          <a href="#" data-source="https://jsonplaceholder.typicode.com/users">Dynamic Users</a>
+        </li>
+        <li>
+          <a href="http://google.de">Submenu entry</a>
+          <ul>
             <li>
-                <a href="http://google.de">News</a>
-                <ul>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                    </li>
-                    <li>
-                        <a href="http://google.de">Submenu entry</a>
-                        <ul>
-                            <li>
-                                <a href="http://google.de">Subsubmenu entry</a>
-                            </li>
-                            <li>
-                                <a href="#" id="special-link-2">Subsubsubmenu entry - I'm special 2!</a>
-                            </li>
-                            <li>
-                                <a href="#">Subsubmenu entry</a>
-                            </li>
-                            <li>
-                                <a href="#">Subsubmenu entry</a>
-                                <ul>
-                                    <li>
-                                        <a href="#">Subsubsubmenu entry</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Subsubsubmenu entry</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Subsubsubmenu entry</a>
-                                    </li>
-                                    <li id="special-link-3">
-                                        <a href="#">Subsubsubmenu entry - I'm special 3!</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Subsubsubmenu entry</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Subsubmenu entry</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                    </li>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                    </li>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                    </li>
-                </ul>
+              <a href="http://google.de">Subsubmenu entry</a>
             </li>
             <li>
-                <a href="#" id="special-link-1">Blog</a>
+              <a href="#" id="special-link-2">Subsubsubmenu entry - I'm special 2!</a>
             </li>
             <li>
-                <a href="#">About</a>
-                <ul>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                    </li>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                        <ul>
-                            <li>
-                                <a href="#">Subsubmenu entry</a>
-                            </li>
-                            <li>
-                                <a href="#">Subsubmenu entry</a>
-                            </li>
-                            <li>
-                                <a href="#">Subsubmenu entry</a>
-                            </li>
-                            <li>
-                                <a href="#">Subsubmenu entry</a>
-                            </li>
-                            <li>
-                                <a href="#">Subsubmenu entry</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                    </li>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                    </li>
-                    <li>
-                        <a href="#">Submenu entry</a>
-                    </li>
-                </ul>
+              <a href="#">Subsubmenu entry</a>
             </li>
-        </ul>
-    </nav>
+            <li>
+              <a href="#">Subsubmenu entry</a>
+              <ul>
+                <li>
+                  <a href="#">Subsubsubmenu entry</a>
+                </li>
+                <li>
+                  <a href="#">Subsubsubmenu entry</a>
+                </li>
+                <li>
+                  <a href="#">Subsubsubmenu entry</a>
+                </li>
+                <li id="special-link-3">
+                  <a href="#">Subsubsubmenu entry - I'm special 3!</a>
+                </li>
+                <li>
+                  <a href="#">Subsubsubmenu entry</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#" data-source="https://jsonplaceholder.typicode.com/posts">Dynamic Postsy</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Submenu entry</a>
+        </li>
+        <li>
+          <a href="#">Submenu entry</a>
+        </li>
+        <li>
+          <a href="#">Submenu entry</a>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <a href="#" id="special-link-1">Blog</a>
+    </li>
+    <li>
+      <a href="#">About</a>
+      <ul>
+        <li>
+          <a href="#">Submenu entry</a>
+        </li>
+        <li>
+          <a href="#">Submenu entry</a>
+          <ul>
+            <li>
+              <a href="#">Subsubmenu entry</a>
+            </li>
+            <li>
+              <a href="#">Subsubmenu entry</a>
+            </li>
+            <li>
+              <a href="#">Subsubmenu entry</a>
+            </li>
+            <li>
+              <a href="#">Subsubmenu entry</a>
+            </li>
+            <li>
+              <a href="#">Subsubmenu entry</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">Submenu entry</a>
+        </li>
+        <li>
+          <a href="#">Submenu entry</a>
+        </li>
+        <li>
+          <a href="#">Submenu entry</a>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</nav>
 
-    <!-- build:js scripts/slide-menu.js -->
-    <script src="scripts/slide-menu.js"></script>
-    <!-- endbuild -->
+<!-- build:js scripts/slide-menu.js -->
+<script src="scripts/slide-menu.js"></script>
+<!-- endbuild -->
 
-    <script defer>
-        (function ($) {
-            $(document).ready(function () {
+<script defer>
+  (function ($) {
 
-                var menuLeft = $('#test-menu-left').slideMenu({
-                    position: 'left',
-                    submenuLinkAfter: ' >',
-                    backLinkBefore: '< '
-                });
+    function fetchItems(source) {
+      return $.get(source).then(function (response) {
+        var ret = [];
+        response.forEach(function (item) {
+          var a = {};
+          a.href = "javascript:void(0)";
+          a.title = item.title || item.name;
 
-                var menuRight = $('#test-menu-right').slideMenu({
-                    submenuLinkAfter: ' ⇒',
-                    backLinkBefore: '⇐ '
-                });
+          if (item.id % 3 === 1) {
+            a.source = source;
+          }
+          ret.push(a);
+        });
+        return ret;
+      });
+    }
 
-                if ($(window).width() > 767) {
-                    menuRight.open(false);
-                }
+    $(function() {
 
-            });
-        })(jQuery);
-    </script>
+      var menuLeft = $('#test-menu-left').slideMenu({
+        position: 'left',
+        submenuLinkAfter: ' >',
+        backLinkBefore: '< ',
+        dynamicSourceFetchFunction: fetchItems,
+        dynamicSourceDataAttribute: 'source',
+        dynamicLoadingContent: '<i class="fa fa-cog"></i> Loading...'
+      });
+
+      var menuRight = $('#test-menu-right').slideMenu({
+        submenuLinkAfter: ' ⇒',
+        backLinkBefore: '⇐ '
+      });
+
+      if ($(window).width() > 767) {
+        menuRight.open(false);
+      }
+
+    });
+
+  })(jQuery);
+</script>
 </body>
 </html>
