Added Overlay Option

--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,8 @@
         position: 'left',
         submenuLinkAfter: ' >',
         backLinkBefore: '< ',
-        
+        showOverlay: false
+
       });
 
       var menuRight = $('#test-menu-right').slideMenu({
